terraform/ec2.tf
#resource "aws_instance" "this" {
  #ami                     = "ami-00710ab5544b60cf7"
  #instance_type           = var.instance_type
#}

#resource "aws_instance" "import" {
  #ami                     = "ami-091f18e98bc129c4e"
  #instance_type           = var.instance_type
  #tags = {
    #"Name" = "tf-import"
  #}
  #user_data_replace_on_change = false
#}
